# fluss

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-macos.yml  rust-ubuntu.yml  rust-windows.yml  rust.yml
examples/: example.rs
src/: lib.rs
src/stream/: mod.rs
src/stream/flow/: map.rs
src/stream/sink/: ignore.rs
src/stream/source/: single.rs
src/stream/stage/: demand.rs  graph.rs  handlers.rs  lets.rs  mod.rs  shape.rs  types.rs
src/stream/topology/: architect.rs  mod.rs
tests/: test_graph_stage_logic.rs
