[package]
name = "fluss"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "0.3.0-alpha.17"
pin-utils = "0.1.0-alpha.4"
slab = "0.4.2"

[dev-dependencies]
async-std = "0.99"
