[package]
name = "fluss"
version = "0.1.1-alpha.1"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vertexclique/fluss"
homepage = "https://github.com/vertexclique/fluss"
documentation = "https://docs.rs/fluss"
description = "Stream processing framework"
keywords = ["async", "stream", "data-processing", "stream-processing", "stream-dsl"]
categories = ["asynchronous", "concurrency", "network-programming"]

[dependencies]
futures-preview = "0.3.0-alpha.17"
pin-utils = "0.1.0-alpha.4"
slab = "0.4.2"
streaming-iterator = "0.1.4"
objekt-clonable = "0.2.2"
crossbeam-channel = "0.3.9"
bus = "2.2.2"

# Remove later when executor is in place
async-std = "0.99"

[dev-dependencies]

